syntax = "proto3";

package logistic;

option go_package = "./pkg/logistic/pb";


service LogisticService {
    rpc CreateLogistic(CreateLogisticRequest) returns (CreateLogisticResponse) {}
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
}

message CreateLogisticRequest {
    string logisticName = 1;
    int64 amount = 2;
    string destinationName = 3;
    string originName = 4;
    string duration = 5;
}

message CreateLogisticResponse {
    int64 status = 1;
    string message = 2;
    string id = 3;
}


message FindOneData {
    string logisticName = 1;
    int64 amount = 2;
    string destinationName = 3;
    string originName = 4;
    string duration = 5;
}

message FindOneRequest { 
    string originName = 1;
    string destinationName = 2;
}

message FindOneResponse {
    int64 status = 1;
    string message = 2;
    FindOneData data = 3;
}